GH-97 Support Kotlin properties (Resolve #97)
* Add KPropertyMember.

* Add AnnotationResolver.

* Fix typo.

* Rename methods to resolve conversation.

* Mega fix B)

* Format code.

* Simplify code changes.

* Fix typo.